feat: Fazendo as tabelas sem chave estrangeira e terminando documentação
