# controller/sexo/controller_sexo.js
@@ -1,40 +1,42 @@
 /****************************************************************
  * Objetivo: Arquivo responsável pela validação, tratamento e
- *          Manipulação de dados para o CRUD de 
- * Data: 08/05/2026
+ *          Manipulação de dados para o CRUD de filmes
+ * Data: 04/06/2026
  * Autor: Matheus Aguiar
- * Versão: 1.1
+ * Versão: 1.0
 ****************************************************************/
 
-
+//Import do arquivo de padronização de mensagens
 const config_message = require('../modulo/configMessages.js') 
 
+//Import do arquivo DAO para fazer o CRUD do filme no banco de dados
+const sexoDAO = require('../../model/DAO/sexo/sexo.js')
 
-const estadoDAO = require('../../model/DAO/estado/estado.js')
+//Função para inserir um novo filme
+const inserirNovoSexo = async function(sexo, contentType){
 
-
-const inserirNovoEstado = async function(estado, contentType){
-
+    //Criando um clone do objeto JSON para manipular a sua estrutura local sem modificar a estrutura original
     let message = JSON.parse(JSON.stringify(config_message))
     
     try{
+    //Validação para o tipo de dados da requisição (somente JSON)
     if(String(contentType).toUpperCase() == 'APPLICATION/JSON'){
 
-    let validar = await validarDados(estado)
+    let validar = await validarDados(sexo)
 
     if(validar){
         return validar // 400
     }
     else{
 
-        let result = await estadoDAO.insertEstado(estado)
+        let result = await sexoDAO.insertSexo(sexo)
 
-        if(result){ // 201
-            estado.id = result
+        if(result){ // 201            
+            sexo.id = result
             message.DEFAULT_MESSAGE.status      = message.SUCCESS_CREATED_ITEM.status
             message.DEFAULT_MESSAGE.status_code = message.SUCCESS_CREATED_ITEM.status_code
             message.DEFAULT_MESSAGE.message     = message.SUCCESS_CREATED_ITEM.message
-            message.DEFAULT_MESSAGE.response    = estado
+            message.DEFAULT_MESSAGE.response    = sexo
         }else{ // 500
             return message.ERROR_INTERNAL_SERVER_MODEL // 500
         }
@@ -49,29 +51,33 @@ const inserirNovoEstado = async function(estado, contentType){
     }
 }
 
-const atualizarEstado = async function(estado, id, contentType){
+//Função para atualizar um filme
+const atualizarSexo = async function(sexo, id, contentType){
     let message = JSON.parse(JSON.stringify(config_message))
-    
-    try{
 
+    try{
+        //Validação do Content Type para receber apenas JSON
         if(String(contentType).toUpperCase() == 'APPLICATION/JSON'){
 
-            let resultBuscarID = await buscarByIdEstado(id)
-            
+            //Validação para o id incorreto
+            let resultBuscarID = await buscarSexo(id)
+
+            //o retorno da função poderá ser um 400 ou 404 ou até mesmo um 500
             if(resultBuscarID.status){
-                let validar = await validarDados(estado, contentType)
- 
+                let validar = await validarDados(sexo, contentType)
+
+                //Validação de campos obrigatórios para atualização (Body)
                 if(!validar){
 
-                    estado.id = id
+                    sexo.id = id
 
-                    let result = await estadoDAO.updateEstado(estado)
+                    let result = await sexoDAO.updateSexo(sexo)
 
                     if(result){
                         message.DEFAULT_MESSAGE.status      = message.SUCESS_UPDATED_ITEM.status
                         message.DEFAULT_MESSAGE.status_code = message.SUCESS_UPDATED_ITEM.status_code
                         message.DEFAULT_MESSAGE.message     = message.SUCESS_UPDATED_ITEM.message
-                        message.DEFAULT_MESSAGE.response    = estado
+                        message.DEFAULT_MESSAGE.response    = sexo
                         return message.DEFAULT_MESSAGE //200 (Atualizado)
                     }else{
                         return message.ERROR_INTERNAL_SERVER_MODEL //500
@@ -88,25 +94,28 @@ const atualizarEstado = async function(estado, id, contentType){
     }catch (error){
         return message.ERROR_INTERNAL_SERVER_CONTROLLER // 500 (Controller)
 
+
     }
     
 }
 
-const listarEstado = async function(){
+const listarSexo = async function(){
 
+    //Criando clone do objeto JSON para manipular a estrutura local sem modificar a estrutura original
     let message = JSON.parse(JSON.stringify(config_message))
 
     try {
-        
-        let result = await estadoDAO.selectAllEstado()
 
+        let result = await sexoDAO.selectAllSexo()
+
+        //Validação para verificar se DAO conseguiu processar os dados
         if(result){
-            
+            //Validação para verificar se existe conteúdo no array
             if(result.length > 0 ){
                 message.DEFAULT_MESSAGE.status         = message.SUCESS_RESPONSE.status
                 message.DEFAULT_MESSAGE.status_code    = message.SUCESS_RESPONSE.status_code
                 message.DEFAULT_MESSAGE.response.count = result.length
-                message.DEFAULT_MESSAGE.response.estado = result
+                message.DEFAULT_MESSAGE.response.sexo = result
 
                 return message.DEFAULT_MESSAGE //200 
 
@@ -119,7 +128,7 @@ const listarEstado = async function(){
     }
 }
 
-const buscarByIdEstado = async function(id){
+const buscarSexo = async function(id){
      //Criando clone do objeto JSON para manipular a estrutura local sem modificar a estrutura original
     let message = JSON.parse(JSON.stringify(config_message))
 
@@ -129,13 +138,13 @@ const buscarByIdEstado = async function(id){
             message.ERROR_BAD_REQUEST.field = '[ID] INVÁLIDO'
             return message.ERROR_BAD_REQUEST // 400
         }else{
-            let result = await estadoDAO.selectByIdEstado(id)
+            let result = await sexoDAO.selectByIdSexo(id)
 
             if(result){
                 if(result.length > 0){
                     message.DEFAULT_MESSAGE.status          = message.SUCESS_RESPONSE.status
                     message.DEFAULT_MESSAGE.status_code     = message.SUCESS_RESPONSE.status_code
-                    message.DEFAULT_MESSAGE.response.estado  = result
+                    message.DEFAULT_MESSAGE.response.sexo  = result
 
                     return message.DEFAULT_MESSAGE //200
                 }else{
@@ -148,17 +157,17 @@ const buscarByIdEstado = async function(id){
             return message.ERROR_INTERNAL_SERVER_CONTROLLER
         }
 }
-const excluirByIdEstado = async function(id){
+
+const excluirSexo = async function(id){
     let message = JSON.parse(JSON.stringify(config_message))
 
     try{
         //Validação do erro 400 e do 404
-
-        let resultBuscarID = await buscarByIdEstado(id)
+        let resultBuscarID = await buscarSexo(id)
 
         if(resultBuscarID.status){
-            
-            let result = await estadoDAO.deleteByIdEstado(id)
+
+            let result = await sexoDAO.deleteByIdSexo(id)
 
             if(result){
                 return  message.SUCESS_DELETED_ITEM //200 (Registro excluido)
@@ -174,25 +183,25 @@ const excluirByIdEstado = async function(id){
     }
 }
 
-const validarDados = async function(estado){
+const validarDados = async function(sexo){
+     //Criando clone do objeto JSON para manipular a estrutura local sem modificar a estrutura original
     let message = JSON.parse(JSON.stringify(config_message))
 
-    //Validação de dados para os atributos (status 400)
-    if(estado.nome == undefined || estado.nome == '' || estado.nome == null || estado.nome.length > 35){
+    if(sexo.nome == undefined || sexo.nome == '' || sexo.nome == null || sexo.nome.length > 30){
         message.ERROR_BAD_REQUEST.field = '[NOME] INVÁLIDO'
         return message.ERROR_BAD_REQUEST //400
-    }else if(estado.sigla == undefined || estado.sigla == '' || estado.sigla == null || estado.sigla.length > 3){
+    }else if(sexo.sigla == undefined || sexo.sigla == '' || sexo.sigla == null || sexo.sigla.length > 5){
         message.ERROR_BAD_REQUEST.field = '[SIGLA] INVÁLIDO'
-        return message.ERROR_BAD_REQUES
+        return message.ERROR_BAD_REQUEST
     }else{
         return false
     }
 }
 
 module.exports = {
-    inserirNovoEstado,
-    listarEstado,
-    buscarByIdEstado,
-    excluirByIdEstado,
-    atualizarEstado
+    inserirNovoSexo,
+    listarSexo,
+    buscarSexo,
+    excluirSexo,
+    atualizarSexo
 }
