# model/DAO/produtora/produtora.js
@@ -1,6 +1,6 @@
 /********************************************************************************
  * Objetivo: Arquivo responsável pelo CRUD no Banco de daods MySQL na tabela
- * Data 15/05/2026
+ * Data: 04/06/2026
  * Autor: Matheus Aguiar
  * Versão: 1.1
  ********************************************************************************/
@@ -14,16 +14,26 @@ const knexConfig = require('../../database_config_knex/knex_file.js')
 //Criar a conexão com o BD Mysql
 const knexConex = knex(knexConfig.development)
 
-
-const insertEstado = async function(estado){
+//Função para inserir dados na tabela de filmes
+const insertProdutora = async function(produtora){
     try {
-        let sql = `insert into tbl_estado (
-                            sigla,
-                            nome
+        let sql = `insert into tbl_produtora (
+                            nome_fantasia,
+                            cnpj,
+                            razao_social,
+                            website,
+                            data_inicio,
+                            status_produtora,
+                            email
                             )
                     values(
-                            '${estado.sigla}',
-                            '${estado.nome}'
+                            '${produtora.nome_fantasia}',
+                            '${produtora.cnpj}',
+                            '${produtora.razao_social}',
+                            '${produtora.website}',
+                            '${produtora.data_inicio}',
+                            '${produtora.status_produtora}',
+                            '${produtora.email}'
                             );`
     
         //Executar o scriptSQL no banco de dados
@@ -38,13 +48,18 @@ const insertEstado = async function(estado){
         }
 }
 
-const updateEstado = async function(estado){
+const updateProdutora = async function(produtora){
         try {
             // Script para atualizar os dados do BD
-            let sql = `update tbl_tipo_telefone set
-                            sigla           = '${estado.sigla}',
-                            nome            = '${estado.nome}'
-                            where id        =  ${estado.id}`
+            let sql = `update tbl_produtora set
+                            nome_fantasia       = '${produtora.nome_fantasia}',
+                            cnpj      = '${produtora.cnpj}',
+                            razao_social = '${produtora.razao_social}',
+                            website = '${produtora.website}',
+                            data_inicio = '${produtora.data_inicio}',
+                            status_produtora = '${produtora.status_produtora}',
+                            email = '${produtora.email}'
+                            where id        =  ${produtora.id}`
               
             // Executa o script SQL no BD
             let result = await knexConex.raw(sql)
@@ -58,10 +73,12 @@ const updateEstado = async function(estado){
         }
 }
 
-const selectAllEstado  = async function(){
+const selectAllProdutora = async function(){
     try {
-        let sql = 'select * from tbl_estado order by id desc'
+        //Script para retornar todos os filmes
+        let sql = 'select * from tbl_produtora order by id desc'
 
+        //Executa no banco de dados o script SQL para retornar os filmes
         let result = await knexConex.raw(sql)
 
         //Validação para verificar se o retorno do banco é um array
@@ -75,9 +92,9 @@ const selectAllEstado  = async function(){
     }
 }
 
-const selectByIdEstado  = async function(id){
+const selectByIdProdutora = async function(id){
     try {
-        let sql = `select * from tbl_estado where id=${id}`
+        let sql = `select * from tbl_produtora where id=${id}`
 
         let result = await knexConex.raw(sql)
 
@@ -90,9 +107,9 @@ const selectByIdEstado  = async function(id){
     }
 }
 
-const deleteByIdEstado = async function(id){
+const deleteByIdProdutora = async function(id){
     try{
-        let sql = `delete from tbl_estado
+        let sql = `delete from tbl_produtora
                      where id=${id}`
 
     let result = await knexConex.raw(sql)
@@ -108,9 +125,9 @@ const deleteByIdEstado = async function(id){
 }
 
 module.exports = {
-    insertEstado,
-    updateEstado,
-    selectAllEstado,
-    selectByIdEstado,
-    deleteByIdEstado
+    insertProdutora,
+    updateProdutora,
+    selectAllProdutora,
+    selectByIdProdutora,
+    deleteByIdProdutora
 }
